Bug 189661 - fix configure.in tests for gcc-3.4 (cvs) r=cls, sr=dbaron